# my_home_work

./: README.md  pyproject.toml
src/: decorators.py  generators.py  masks.py  mylog.txt  processing.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_generators.py  test_home_work.py
